--- a/angular/src/app/main/TasksCheckList/create-or-edit-task/create-or-edit-task.component.css
+++ b/angular/src/app/main/TasksCheckList/create-or-edit-task/create-or-edit-task.component.css
@@ -1,3 +1,17 @@
 .eom-radio {
     margin-top: 60px;
 }
+.form-group{
+    position: relative;
+}
+.igx-calender{
+    position: absolute;
+    z-index: 1;
+    top: 80px;
+    box-shadow: 0 0 20px #ccc;
+    width: 180px;
+    height: 170px;
+    overflow: auto;
+}
+.drag_drop_box {
+}
