--- a/angular/src/app/main/TasksCheckList/task-details/task-details.component.html
+++ b/angular/src/app/main/TasksCheckList/task-details/task-details.component.html
@@ -19,10 +19,57 @@
                  
                  <div class="row">
                      <div class="col-md-6">
-                     <h5>Some task name col6</h5>
+                         <div class="row">
+                            <h5>Some task name col6</h5>
+                            <div class="row">
+                                <div class="col-md-12">
+                                Category   <span class="badge badge-secondary bagesTextColor">Secondary</span>
+                                Closing Month   <span class="badge badge-secondary bagesTextColor">Secondary</span>
+                                Due By   <span class="badge badge-secondary bagesTextColor">Secondary</span>
+                                </div>
+                               
+                            </div>
+                         </div>
+                         <div class="row">
+                             <div class="col-md-12">
+                                 <p>If Step 1 doesn't work, try changing your Windows appearance settings. 
+                                     This step is most helpful for displays with high resolution.
+                                     If Step 1 doesn't work, try changing your Windows appearance settings.If Step 1 doesn't work, try changing your Windows appearance settings. 
+                                     This step is most helpful for displays with high resolution. 
+                                    
+                                    </p>
+                             </div>
+                         </div>
+                     
                      </div>
                      <div class="col-md-6">
                      task details col6
+                     <div class="row">
+                        
+                         <div class="col-md-4">
+                            <select class="form-control input-medium"
+                            (change)="closingMonthSelect($event.target.value)">
+                            <option value="January">Ihsan</option>
+                            <option value="Febuary">Imad</option>
+                           
+                        </select>
+                           
+                         </div>
+                         <div class="col-md-4">
+                            <select class="form-control input-medium"
+                            (change)="closingMonthSelect($event.target.value)">
+                            <option value="January">InProgress</option>
+                            <option value="Febuary">Complete</option>
+                           
+                        </select>
+                         </div>
+                         <div class="col-md-4">
+                            <i class="fa fa-trash" style="color: #5867dd;"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <i class="fas fa-edit" style="color: #5867dd;"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <i class="fa fa-clone" aria-hidden="true"></i>
+                                
+                        </div>
+                     </div>
                      </div>
                  </div>
                 </div>
