--- a/angular/src/app/main/TasksCheckList/user-list-component/user-list-component.component.html
+++ b/angular/src/app/main/TasksCheckList/user-list-component/user-list-component.component.html
@@ -14,7 +14,8 @@
     <div>
         <p-autoComplete [(ngModel)]="selectedUserId" [suggestions]="users" (completeMethod)="onSearchUsers($event)" field="name"
             placeholder="Search..." [minLength]="1" name="SingleSelectInput" id="SingleSelectInput" [multiple]="false"
-            inputStyleClass="form-control" styleClass="width-percent-100" [forceSelection]="true" required>
+            inputStyleClass="form-control" styleClass="width-percent-100" [forceSelection]="true" required
+          >
         </p-autoComplete>
     </div>
 </div>
