--- a/angular/src/app/main/categories/categories/categories.component.html
+++ b/angular/src/app/main/categories/categories/categories.component.html
@@ -1,62 +1,42 @@
-﻿<style>
-    .filter-by-user {
-        list-style-type: none;
-        display: inline-block;
-        margin-right: 20px;
-    }
-
-    .filter-by-user li {
-        display: inline-block;
-        vertical-align: middle;
-        margin-right: -15px;
-    }
-
-    .fc-unthemed .fc-toolbar .fc-button {
-        color: #74788d;
-        background: transparent;
-        border: 1px solid #ebedf2;
-    }
-
-    .custom-categories-table tr td,
-    .custom-categories-table tr th {
-        padding: 8px 15px !important;
-        max-width: 200px;
-        width: 20%;
-    }
-
-    .custom-categories-table tr td .btn-group .btn {
-        padding: 0 10px 0 0;
-    }
-</style>
-
-<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="kt-portlet" id="kt_portlet">
-                <div class="kt-portlet__head">
-                    <div class="kt-portlet__head-label">
-                        <h3 class="kt-portlet__head-title">
-                            Categories
-                        </h3>
-                    </div>
-                    <div class="kt-subheader__toolbar">
-                        <div class="kt-subheader__wrapper">
-                            <button *ngIf="isGranted('Pages.Categories.Create')" (click)="createCategory()"
-                                class="btn btn-primary blue"><i class="fa fa-plus"></i>Add New</button>
-                        </div>
+﻿<div [@routerTransition]>
+    <div class="kt-content  kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor">
+        <div class="kt-subheader kt-grid__item">
+            <div [class]="containerClass">
+                <div class="kt-subheader__main">
+                    <h3 class="kt-subheader__title">
+                        <span>{{"Categories" | localize}}</span>
+                    </h3>
+                    <span class="kt-subheader__separator kt-subheader__separator--v"></span>
+                    <span class="kt-subheader__desc">
+                        {{"CategoriesHeaderInfo" | localize}}
+                    </span>
+                </div>
+                <div class="kt-subheader__toolbar">
+                    <div class="kt-subheader__wrapper">
+                        <button (click)="createCategory()" *ngIf="'Pages.Categories.Create' | permission"
+                            class="btn btn-primary"><i class="fa fa-plus"></i> {{"AddNew" | localize}}</button>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div [class]="containerClass + ' kt-grid__item kt-grid__item--fluid'">
+            <div class="kt-portlet kt-portlet--mobile">
                 <div class="kt-portlet__body">
-                    <div class="col-md-3 kt-margin-b-20-tablet-and-mobile">
-                        <div class="kt-input-icon kt-input-icon--left">
-                            <input (input)="getCategories()" [(ngModel)]="filterText" name="filterText" autoFocus
-                                class="form-control m-input" [placeholder]="l('SearchWithThreeDot')" type="text">
-                            <span class="kt-input-icon__icon kt-input-icon__icon--left">
-                                <span><i class="la la-search"></i></span>
-                            </span>
+                    <form class="kt-form" autocomplete="new-password">
+                        <div>
+                            <div class="row align-items-center mb-4">
+                                <div class="col-md-3 kt-margin-b-20-tablet-and-mobile">
+                                    <div class="kt-input-icon kt-input-icon--left">
+                                        <input (input)="getCategories()" [(ngModel)]="filterText" name="filterText" autoFocus
+                                            class="form-control m-input" [placeholder]="l('SearchWithThreeDot')" type="text">
+                                        <span class="kt-input-icon__icon kt-input-icon__icon--left">
+                                            <span><i class="la la-search"></i></span>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <!--start-->
+                    </form>
 
                     <div class="row align-items-center">
                         <!--<Primeng-TurboTable-Start>-->
@@ -73,7 +53,7 @@
                                         <th>Description</th>
                                         <th>Creation On</th>
                                         <th>Created By</th>
-                                        <th>Actions</th>
+                                        <th [hidden]="!(['Pages.Categories.Edit', 'Pages.Categories.Delete'] | permissionAny)">Actions</th>
                                     </tr>
 
 
@@ -105,13 +85,13 @@
                                                 </div>
                                             </span>
                                         </td>
-                                        <td>
+                                        <td [hidden]="!(['Pages.Categories.Edit', 'Pages.Categories.Delete'] | permissionAny)">
                                             <div class="btn-group">
 
-                                                <a class="btn" href="javascript:;"
+                                                <a *ngIf="'Pages.Categories.Edit' | permission" class="btn" href="javascript:;"
                                                     (click)="editCategory(record.category.id)">
                                                     <i class="fas fa-edit" style="color: #5867dd;"></i></a>
-                                                <a class="btn" href="javascript:;"
+                                                <a *ngIf="'Pages.Categories.Delete' | permission" class="btn" href="javascript:;"
                                                     (click)="deleteCategory(record.category)">
                                                     <i class="fa fa-trash" style="color: #5867dd;"></i></a>
 
@@ -140,11 +120,8 @@
                         </div>
                         <!--<Primeng-TurboTable-End>-->
                     </div>
-
-                    <!--End-->
-
                 </div>
-
             </div>
         </div>
     </div>
+</div>
