--- a/angular/src/app/main/TasksCheckList/create-or-edit-task/create-or-edit-task.component.html
+++ b/angular/src/app/main/TasksCheckList/create-or-edit-task/create-or-edit-task.component.html
@@ -59,7 +59,7 @@
                                         <div (click)="commentClick()" >
                                             <div class="kt-user-card-v2">
                                                 <div class="kt-user-card-v2__pic">
-                                                    <img alt="photo" src="assets/media/users/100_10.jpg">
+                                                    <div class="kt-badge kt-badge--xl kt-badge--warning">{{userSignInName}}</div>
                                                 </div>
                                                 <input [(ngModel)]="checklist.commentBody"  class="form-control">
                                             </div>  
