--- a/angular/src/app/main/TasksCheckList/task-details/task-details.component.html
+++ b/angular/src/app/main/TasksCheckList/task-details/task-details.component.html
@@ -16,83 +16,93 @@
                     </div>
                 </div>
                 <div class="kt-portlet__body">
-                 
-                 <div class="row">
-                     <div class="col-md-7">
-                         <div class="row">
-                            <h5>Some task name col6</h5>
+
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="row">
+                                <h5>Some task name col6</h5>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        Category <span class="badge badge-secondary bagesTextColor">Secondary</span>
+                                        Closing Month <span
+                                            class="badge badge-secondary bagesTextColor">Secondary</span>
+                                        Due By <span class="badge badge-secondary bagesTextColor">Secondary</span>
+                                    </div>
+
+                                </div>
+                            </div>
                             <div class="row">
                                 <div class="col-md-12">
-                                Category   <span class="badge badge-secondary bagesTextColor">Secondary</span>
-                                Closing Month   <span class="badge badge-secondary bagesTextColor">Secondary</span>
-                                Due By   <span class="badge badge-secondary bagesTextColor">Secondary</span>
+                                    <p>If Step 1 doesn't work, try changing your Windows appearance settings.
+                                        This step is most helpful for displays with high resolution.
+                                        If Step 1 doesn't work, try changing your Windows appearance settings.If Step 1
+                                        doesn't work, try changing your Windows appearance settings.
+                                        This step is most helpful for displays with high resolution.
+
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-5">
+                                    <select class="form-control input-medium"
+                                        (change)="closingMonthSelect($event.target.value)">
+                                        <option value="January">Comments</option>
+                                        <option value="Febuary">History</option>
+                                    </select>
+                                </div>
+
+                            </div>
+                            <div class="row">
+                                <div class="col comment-section mt-5">
+                                    <div class="row comment-wrapper border-bottom pb-3 mb-3">
+                                        <img alt="photo" class="col-2" src="assets/media/users/100_10.jpg">
+                                        <div class="col-10 comments-text d-flex mb-4">
+                                            <h5 class="col-6 p-0 text-left">asdfdsf</h5>
+                                            <h5 class="col-6 p-0 text-right">20 Jan, 2020</h5>
+                                        </div>
+                                        <p class="col">asdfghjkw fghjk thj krtyuiolu</p>
+
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-md-5">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <select class="form-control input-medium"
+                                        (change)="closingMonthSelect($event.target.value)">
+                                        <option value="January">Ihsan</option>
+                                        <option value="Febuary">Imad</option>
+
+                                    </select>
+
+                                </div>
+                                <div class="col-md-4">
+                                    <select class="form-control input-medium"
+                                        (change)="closingMonthSelect($event.target.value)">
+                                        <option value="January">InProgress</option>
+                                        <option value="Febuary">Complete</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-4">
+                                    <i class="fa fa-trash" style="color: #5867dd;"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fas fa-edit" style="color: #5867dd;"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fa fa-clone" aria-hidden="true"></i>
+
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="drag_drop_box" >
+                                        <label>Attachments</label>
+                                    <ng-uppy [config]="settings" (onFileUpload)="onFileUpload($event)"></ng-uppy>
+                                </div>
                                 </div>
                                
                             </div>
-                         </div>
-                         <div class="row">
-                             <div class="col-md-12">
-                                 <p>If Step 1 doesn't work, try changing your Windows appearance settings. 
-                                     This step is most helpful for displays with high resolution.
-                                     If Step 1 doesn't work, try changing your Windows appearance settings.If Step 1 doesn't work, try changing your Windows appearance settings. 
-                                     This step is most helpful for displays with high resolution. 
-                                    
-                                    </p>
-                             </div>
-                         </div>
-                         <div class="row">
-                             <div class="col-5">
-                                <select class="form-control input-medium"
-                                (change)="closingMonthSelect($event.target.value)">
-                                <option value="January">Comments</option>
-                                <option value="Febuary">History</option>                          
-                            </select>
-                             </div>
-                            
-                         </div>
-                         <div class="row">
-                             <div class="col comment-section mt-5">
-                                 <div class="row comment-wrapper border-bottom pb-3 mb-3">
-                                    <img alt="photo" class="col-2" src="assets/media/users/100_10.jpg">
-                                     <div class="col-10 comments-text d-flex mb-4">
-                                         <h5 class="col-6 p-0 text-left">asdfdsf</h5>
-                                         <h5 class="col-6 p-0 text-right">20 Jan, 2020</h5>
-                                    </div>
-                                    <p class="col">asdfghjkw fghjk thj krtyuiolu</p>
-
-                                 </div>
-                             </div>
-                         </div>
-                     
-                     </div>
-                     <div class="col-md-5">
-                     <div class="row">                      
-                         <div class="col-md-4">
-                            <select class="form-control input-medium"
-                            (change)="closingMonthSelect($event.target.value)">
-                            <option value="January">Ihsan</option>
-                            <option value="Febuary">Imad</option>
-                           
-                        </select>
-                           
-                         </div>
-                         <div class="col-md-4">
-                            <select class="form-control input-medium"
-                            (change)="closingMonthSelect($event.target.value)">
-                            <option value="January">InProgress</option>
-                            <option value="Febuary">Complete</option>
-                           
-                        </select>
-                         </div>
-                         <div class="col-md-4">
-                            <i class="fa fa-trash" style="color: #5867dd;"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <i class="fas fa-edit" style="color: #5867dd;"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <i class="fa fa-clone" aria-hidden="true"></i>
-                                
                         </div>
-                     </div>
-                     </div>
-                 </div>
+                    </div>
                 </div>
 
             </div>
