--- a/angular/src/app/main/categories/categories/categories.component.css
+++ b/angular/src/app/main/categories/categories/categories.component.css
@@ -26,3 +26,20 @@
 .custom-categories-table tr td .btn-group .btn {
     padding: 0 10px 0 0;
 }
+
+.categories-table .ui-table .ui-table-thead > tr > th, 
+.categories-table .ui-table .ui-table-tbody > tr:nth-child(even),
+.categories-table .ui-table .ui-table-tbody > tr:nth-child(odd) {
+    background-color: transparent;
+    border-bottom: 1px solid #f1f1f1;
+}
+
+.primeng-paging-container {
+    padding-top: 15px;
+}
+.primeng-paging-container .ui-paginator{
+    text-align: left !important;
+}
+.primeng-paging-container .total-records-count{
+    float: right;
+}
