edit closing checklist api

--- a/angular/src/app/main/TasksCheckList/edit-task/edit-task.component.html
+++ b/angular/src/app/main/TasksCheckList/edit-task/edit-task.component.html
@@ -88,6 +88,50 @@
                                                 </div>
                                             </div>
 
+                                            <div class="kt-widget3__item ">
+                                                <div class="kt-widget3__header">
+                                                    <div class="kt-widget3__user-img">
+                                                        <img class="kt-widget3__img" src="./assets/media/users/user1.jpg" alt="">
+                                                    </div>
+                                                    <div class="kt-widget3__info">
+                                                        <a class="kt-widget3__username">
+                                                        Melania Trump
+                                                        </a><br>
+                                                        
+                                                    </div>
+                                                    <span class="kt-widget3__status kt-font-info">
+                                                    2 Days Ago
+                                                    </span>
+                                                </div>
+                                                <div class="kt-widget3__body">
+                                                    <p class="kt-widget3__text commentViewBox">
+                                                    hammad khan 
+                                                    </p>
+                                                </div>
+                                            </div>
+
+                                            <div class="kt-widget3__item ">
+                                                <div class="kt-widget3__header">
+                                                    <div class="kt-widget3__user-img">
+                                                        <img class="kt-widget3__img" src="./assets/media/users/user1.jpg" alt="">
+                                                    </div>
+                                                    <div class="kt-widget3__info">
+                                                        <a class="kt-widget3__username">
+                                                        Melania Trump
+                                                        </a><br>
+                                                        
+                                                    </div>
+                                                    <span class="kt-widget3__status kt-font-info">
+                                                    2 Days Ago
+                                                    </span>
+                                                </div>
+                                                <div class="kt-widget3__body">
+                                                    <p class="kt-widget3__text commentViewBox">
+                                                    hammad khan 
+                                                    </p>
+                                                </div>
+                                            </div>
+
                                         </div>
                                     </div>
 
