--- a/angular/src/app/main/TasksCheckList/edit-task/edit-task.component.css
+++ b/angular/src/app/main/TasksCheckList/edit-task/edit-task.component.css
@@ -21,10 +21,11 @@
     margin-left: 50px;
 }
 .commentmainView {
-    border-style: solid;
-    border-width: thin;
-    border-color:grey;
+    border: 1px solid #e2e5ec;
     margin-top: 20px;
     max-height: 300px;
     overflow-x: hidden
+}
+.giveCommentView {
+    margin-top: 20px;
 }
