--- a/angular/src/app/main/TasksCheckList/task-details/task-details.component.html
+++ b/angular/src/app/main/TasksCheckList/task-details/task-details.component.html
@@ -20,25 +20,29 @@
                     <div class="row">
                         <div class="col-md-7">
                             <div class="row">
-                                <h5>Some task name col6</h5>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        Category <span class="badge badge-secondary bagesTextColor">Secondary</span>
-                                        Closing Month <span
-                                            class="badge badge-secondary bagesTextColor">Secondary</span>
-                                        Due By <span class="badge badge-secondary bagesTextColor">Secondary</span>
-                                    </div>
-
+                                <div class="col-md-12">
+                                    <h5>{{taskDetailObject.taskName}}</h5>
                                 </div>
+                               
+                                
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
+                                    Category <span class="badge badge-secondary bagesTextColor">Secondary</span>
+                                    Closing Month <span
+                                        class="badge badge-secondary bagesTextColor">{{taskDetailObject.closingMonth}}</span>
+                                    Due By <span class="badge badge-secondary bagesTextColor">{{taskDetailObject.endsOn}}</span>
+                                </div>
+
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+
                                     <p>If Step 1 doesn't work, try changing your Windows appearance settings.
                                         This step is most helpful for displays with high resolution.
                                         If Step 1 doesn't work, try changing your Windows appearance settings.If Step 1
                                         doesn't work, try changing your Windows appearance settings.
                                         This step is most helpful for displays with high resolution.
-
                                     </p>
                                 </div>
                             </div>
@@ -52,12 +56,12 @@
                                 </div>
 
                             </div>
-                            <div class="row">
+                            <div class="row"  >
                                 <div class="col comment-section mt-5">
                                     <div class="row comment-wrapper border-bottom pb-3 mb-3">
                                         <img alt="photo" class="col-2" src="assets/media/users/100_10.jpg">
                                         <div class="col-10 comments-text d-flex mb-4">
-                                            <h5 class="col-6 p-0 text-left">asdfdsf</h5>
+                                            <h5 class="col-6 p-0 text-left">UserName</h5>
                                             <h5 class="col-6 p-0 text-right">20 Jan, 2020</h5>
                                         </div>
                                         <p class="col">asdfghjkw fghjk thj krtyuiolu</p>
