--- a/angular/src/app/main/TasksCheckList/tasks/tasks.component.html
+++ b/angular/src/app/main/TasksCheckList/tasks/tasks.component.html
@@ -89,7 +89,7 @@
                                         
                                             <td data-field="ShipDate" class="kt-datatable__cell"><span style="width: 145px;">2/12/2018</span></td>
 
-                                            <td data-field="CompanyName" class="kt-datatable__cell"><span style="width: 145px;">{{i.closingCheckListForViewDto.taskName}}</span></td>
+                                            <td data-field="CompanyName" (click)="RedirectToDetail(i.closingCheckListForViewDto.id)" class="kt-datatable__cell"><span style="width: 145px;">{{i.closingCheckListForViewDto.taskName}}</span></td>
                                             
                                             <td data-field="Type" data-autohide-disabled="false" class="kt-datatable__cell"><span style="width: 145px;"><span
                                                         class="btn btn-secondary btn-sm">{{i.closingCheckListForViewDto.category}}</span></span>
