--- a/angular/src/app/main/TasksCheckList/edit-task/edit-task.component.html
+++ b/angular/src/app/main/TasksCheckList/edit-task/edit-task.component.html
@@ -21,14 +21,14 @@
                         <div class="col-md-7">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <app-categorie-drop-down></app-categorie-drop-down>
+                                    <app-categorie-drop-down [SelectedCategory] = 2 ></app-categorie-drop-down>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label for="dateOfBirth">Closing Month</label>
                                         <div class="form-group">
                                             <form class="container">
-                                                <input [(ngModel)]="checklist.closingMonth" autocomplete="off" class="form-control" name="date" bsDatepicker [bsConfig]="{dateInputFormat: 'MM/YYYY'}" (onShown)="onOpenCalendar($event)">
+                                                <input [(ngModel)]="getTaskForEdit.closingMonth" autocomplete="off" class="form-control" name="date" bsDatepicker [bsConfig]="{dateInputFormat: 'MM/YYYY'}" (onShown)="onOpenCalendar($event)">
                                                 </form>
                                         </div>
                                     </div> 
@@ -39,7 +39,7 @@
                                     <div class="form-group">
                                         <label for="email"> Task Name</label>
                                         <input type="email" class="form-control  bsDatepicker"
-                                            [(ngModel)]="checklist.taskName">
+                                            [(ngModel)]="getTaskForEdit.taskName">
                                             
                                     </div>
                                 </div>
@@ -83,54 +83,11 @@
                                                 </div>
                                                 <div class="kt-widget3__body">
                                                     <p class="kt-widget3__text commentViewBox">
-                                                    hammad khan 
+                                                   hammad
                                                     </p>
                                                 </div>
                                             </div>
-
-                                            <div class="kt-widget3__item ">
-                                                <div class="kt-widget3__header">
-                                                    <div class="kt-widget3__user-img">
-                                                        <img class="kt-widget3__img" src="./assets/media/users/user1.jpg" alt="">
-                                                    </div>
-                                                    <div class="kt-widget3__info">
-                                                        <a class="kt-widget3__username">
-                                                        Melania Trump
-                                                        </a><br>
-                                                        
-                                                    </div>
-                                                    <span class="kt-widget3__status kt-font-info">
-                                                    2 Days Ago
-                                                    </span>
-                                                </div>
-                                                <div class="kt-widget3__body">
-                                                    <p class="kt-widget3__text commentViewBox">
-                                                    hammad khan 
-                                                    </p>
-                                                </div>
-                                            </div>
-
-                                            <div class="kt-widget3__item ">
-                                                <div class="kt-widget3__header">
-                                                    <div class="kt-widget3__user-img">
-                                                        <img class="kt-widget3__img" src="./assets/media/users/user1.jpg" alt="">
-                                                    </div>
-                                                    <div class="kt-widget3__info">
-                                                        <a class="kt-widget3__username">
-                                                        Melania Trump
-                                                        </a><br>
-                                                        
-                                                    </div>
-                                                    <span class="kt-widget3__status kt-font-info">
-                                                    2 Days Ago
-                                                    </span>
-                                                </div>
-                                                <div class="kt-widget3__body">
-                                                    <p class="kt-widget3__text commentViewBox">
-                                                    hammad khan 
-                                                    </p>
-                                                </div>
-                                            </div>
+  
 
                                         </div>
                                     </div>
@@ -169,7 +126,7 @@
                                 <div class="col-md-12">
                                     <label>Instruction</label>
                                     <div class="form-group">
-                                        <p-editor [(ngModel)]="checklist.instruction" name="HtmlEditorInput"
+                                        <p-editor [(ngModel)]="getTaskForEdit.instruction" name="HtmlEditorInput"
                                             [style]="{'height':'150px'}"></p-editor>
                                     </div>
                                     
@@ -182,7 +139,7 @@
                                     <div class="form-group">
                                         <label>Frequency</label>
                                         <select class="form-control input-medium"
-                                        [(ngModel)]="checklist.frequency">
+                                        [(ngModel)]="getTaskForEdit.frequency">
                                             <option value="1">Monthly</option>
                                             <option value="2">Quarterly</option>
                                             <option value="3">Annually</option>
@@ -202,7 +159,7 @@
                                                 </span>
                                             </div>
                                             <select class="form-control input-medium"
-                                            [(ngModel)]="checklist.dueOn">
+                                            [(ngModel)]="getTaskForEdit.dueOn">
                                                 <option value="1">1</option>
                                                 <option value="2">2</option>
                                                 <option value="3">3</option>
@@ -213,7 +170,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label>Status</label>
-                                        <app-status></app-status>
+                                        <app-status [StatusList] = getTaskForEdit.status ></app-status>
                                         
                                     </div>
                                     
@@ -222,7 +179,7 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <label>No of Months</label>
-                                        <input type="text" name="noOfMonths" class="form-control bsDatepicker" [(ngModel)]="checklist.noOfMonths" >
+                                        <input type="text" name="noOfMonths" class="form-control bsDatepicker" [(ngModel)]="getTaskForEdit.noOfMonths" >
                                     </div>
                                     <div class="form-group">
                                         <label>Days Before</label>
@@ -240,7 +197,7 @@
                                     <div class="form-group">
                                         <label>Ends on</label>
                                         <form class="container">
-                                            <input [(ngModel)]="checklist.endsOn" autocomplete="off" class="form-control" name="date" bsDatepicker [bsConfig]="{dateInputFormat: 'MM/YYYY'}" (onShown)="onOpenCalendar($event)">
+                                            <input [(ngModel)]="getTaskForEdit.endsOn" autocomplete="off" class="form-control" name="date" bsDatepicker [bsConfig]="{dateInputFormat: 'MM/YYYY'}" (onShown)="onOpenCalendar($event)">
                                             </form>
                                     </div>
                                     <div class="kt-radio-list eom-radio">
