--- a/angular/src/app/main/TasksCheckList/task-details/task-details.component.html
+++ b/angular/src/app/main/TasksCheckList/task-details/task-details.component.html
@@ -91,7 +91,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <i class="fa fa-trash" style="color: #5867dd;"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                    <i class="fas fa-edit" style="color: #5867dd;"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fas fa-edit" (click)="RedirectToEditTaskPage()" style="color: #5867dd;"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                     <i class="fa fa-clone" aria-hidden="true"></i>
 
                                 </div>
