--- a/angular/src/app/main/TasksCheckList/tasks/tasks.component.css
+++ b/angular/src/app/main/TasksCheckList/tasks/tasks.component.css
@@ -1,131 +1,177 @@
 *{
-	box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 body{
-	margin: 0;
-	padding: 0;
-	font-family: 'Poppins', sans-serif;
-	font-size: 14px;
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
 }
 h1{
-	font-size: 36px;
+    font-size: 36px;
 }
 h2{
-	font-size: 32px;
+    font-size: 32px;
 }
 h3{
-	font-size: 28px;
+    font-size: 28px;
 }
 h4{
-	font-size: 24px;
+    font-size: 24px;
 }
 h5{
-	font-size: 21px;
+    font-size: 21px;
 }
 h6{
-	font-size: 18px;
+    font-size: 18px;
 }
 p{
-	font-size: 14px;
+    font-size: 14px;
 }
 .btn{
-	font-size: 14px; 
+    font-size: 14px; 
 }
 ul{
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
 }
 span{
-	display: inline-block;
+    display: inline-block;
 }
 .border-bottom-grey{
-	border-bottom:1px solid #EBEDF2;
+    border-bottom:1px solid #EBEDF2;
 }
 .border-grey{
-	border:1px solid #EBEDF2;
+    border:1px solid #EBEDF2;
 }
 .bg-lightgrey{
-	background-color: #F1F2FC;
+    background-color: #F1F2FC !important;
 }
 .bg-purple{
-	background-color: #6F42C1;
+    background-color: #6F42C1 !important;
 }
 .bg-golden{
-	background-color: #FFB822;
+    background-color: #FFB822 !important;
 }
 .bg-sea-green{
-	background-color: #0ABB87;
+    background-color: #0ABB87 !important;
+}
+.bg-brown{
+    background-color: #ac7339 !important;
 }
 .bg-blue{
-	background-color: #3F94FD;
+    background-color: #3F94FD !important;
+}
+.bg-magenta{
+    background-color: #993399 !important;
 }
 .text-blue{
-	color: #3F94FD;
+    color: #3F94FD;
 }
 
 /*card header*/
 .custom-container{
-	max-width: 1600px;
-	width: 100%;
-	margin: 0 auto; 
+    max-width: 1600px;
+    width: 100%;
+    margin: 0 auto; 
 }
 .record-card-header-top {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 15px;
 }
 .record-card-header-top-inner1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .record-card-header-top-inner1 img {
     margin-right: 12px;
 }
 .record-card-header-top-inner1 h6{
-	margin: 6px; 
+    margin: 6px; 
 }
 .record-card-header-bottom {
-	display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 15px;
 }
 .record-card-header-bottom-inner1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .record-card-header-bottom-inner1 h5{
-	margin: 0; 
+    margin: 0; 
 }
 button.btn.arrow-btn {
     border: 1px solid #EBEDF2;
     margin-right: 10px;
 }
 button.btn-square{
-	    border: 1px solid #EBEDF2;
-	    line-height: .5;
-	    width: 35px;
-	    height: 35px;
-	    padding: 5px;
-	    display: flex;
-	    align-items: center;
-	    justify-content: center;
+        border: 1px solid #EBEDF2;
+        line-height: .5;
+        width: 35px;
+        height: 35px;
+        padding: 5px;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
 }
 .record-card-header-top-inner2 .btn {
     padding: 6px 32px;
 }
 .record-card-header-bottom-inner2 .upper-content{
-	display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-bottom: 15px;
 }
 .users-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row-reverse;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content
 }
 .user-image-box {
@@ -133,14 +179,20 @@ button.btn-square{
     height: 40px;
 }
 .member-count{
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border-radius: 50%;
-	width: 40px;
-	height: 40px;
-	position: relative;
-	cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    position: relative;
+    cursor: pointer;
 }
 .member-count .member-dropdown {
     position: absolute;
@@ -148,25 +200,30 @@ button.btn-square{
     right: 0;
     width: 215px;
     background-color: #fff;
-    box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.2);
     padding: 10px;
     border-radius: 4px;
     display: none;
 }
 .member-count:hover .member-dropdown{
-	display: block;
+    display: block;
 }
 .member-count .member-dropdown ul li {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-bottom: 5px;
     padding-bottom: 5px;
     border-bottom: 1px solid #EBEDF2;
 }
 .member-count .member-dropdown ul li:last-child{
-	margin-bottom: 0;
-	padding-bottom: 0;
-	border-bottom: 0;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border-bottom: 0;
 }
 .member-count .member-dropdown .mem-img {
     width: 40px;
@@ -176,22 +233,30 @@ button.btn-square{
     margin-right: 10px;
 }
 .member-count .member-dropdown .mem-img img{
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 .user-image{
-	border: 1px solid #fff;
-	display: flex;
-    justify-content: center;
-    align-items: center;
+    border: 1px solid #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     overflow: hidden;
     border-radius: 50%;
     width: 40px;
     height: 100%;
 }
 .user-image img {
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     width: 100%;
     height: 100%;
 }
@@ -200,14 +265,16 @@ form.search-form .form-group{
     margin: 0; 
 }
 form.search-form .form-group::after{
-	content: "";
+    content: "";
   width: 16px;
   height: 16px;
   position: absolute;
   top: 50%;
   left: 8px;
-  transform: translateY(-50%);
-  /* background-image: url(../images/search-icon.png); */
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  /* background-image: url("../../../../assets/media/ClosingCheckList/images/search-icon.png"); */
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -219,62 +286,83 @@ form.search-form .form-group input {
 }
 form.search-form .form-group,
 .lower-content form .form-group:nth-child(1){
-	width: 170px;
+    width: 170px;
 }
 .lower-content form .form-group:nth-child(1){
-	margin-left: 0; 
+    margin-left: 0; 
 }
 .lower-content form .form-group:nth-child(2){
-	max-width: 215px;
+    max-width: 215px;
 }
 .lower-content form .form-group:nth-child(3){
-	max-width: 135px;
+    max-width: 135px;
+}
+
+form.search-form .form-group input::-webkit-input-placeholder{
+    color: #b9bbca;
+}
+
+form.search-form .form-group input::-moz-placeholder{
+    color: #b9bbca;
+}
+
+form.search-form .form-group input:-ms-input-placeholder{
+    color: #b9bbca;
+}
+
+form.search-form .form-group input::-ms-input-placeholder{
+    color: #b9bbca;
 }
 
 form.search-form .form-group input::placeholder{
-	color: #b9bbca;
+    color: #b9bbca;
 }
 form.search-form input::after{
-	content: "";
-	width: 20px;
-	height: 20px;
-	position: absolute;
-	top: 0;
-	left: 0;
-	background-color: red;
+    content: "";
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: red;
 }
 .record-card-header-bottom-inner2 .upper-content > div {
     margin-left: 12px;
 }
 .lower-content form {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-end;
-    flex-wrap: wrap;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 .lower-content form > div{
-	margin-left: 12px;
+    margin-left: 12px;
 }
 .lower-content form > div:not(.block-btn){
-	max-width: 170px;
-	width: 100%;
+    max-width: 170px;
+    width: 100%;
 }
 .lower-content form .form-control {
     font-size: 14px;
 }
 table.table.record-table{
-	min-width: 991px;
+    min-width: 991px;
 }
 .record-table th,
 .record-table td{
-	padding: 10px 30px;
+    padding: 10px 30px;
 }
 .record-table th{
-	border: 0;
-	border-bottom-width: 1px !important; 
+    border: 0;
+    border-bottom-width: 1px !important; 
 }
 .record-card-body table th,
 .record-card-body table td{
-	vertical-align: middle;
+    vertical-align: middle;
 }
 .record-table tr td:nth-child(1) {
     min-width: 150px;
@@ -283,17 +371,54 @@ table.table.record-table{
     font-weight: bold;
     margin-right: 10px;
 }
-.record-card-body > table .task-box {
+.record-card-body table .task-box {
     padding: 2px 20px;
     border-radius: 20px;
     width: 100%;
     position: relative;
 }
-form.task-report-form select:focus {
-    background-color: #fff;
-    color: #000 !important;
+.task-report-form{
+    width: 100px;
+    height: 23px;
+    overflow: hidden;
+    overflow: -moz-hidden-unscrollable;
+    /* background: url("../../../../assets/media/ClosingCheckList/arrow-down-white.svg") no-repeat; */
+    position: relative;
+    background-position: 86px 10px;
+    color: black;
+    border-radius: 4px;
 }
-.record-card-body > table .task-box::after {
+
+/*table dropdown colors*/
+form.task-report-form select:focus {
+    color: #fff !important;
+    /* background-image: url("../../../../assets/media/ClosingCheckList/arrow-down-white.svg"); */
+    background-repeat: no-repeat;
+    background-position: 86px 10px;
+}
+form.task-report-form.bg-golden select:focus {
+    background-color: #ffb822;
+}
+form.task-report-form.bg-purple select:focus {
+    background-color: #6F42C1;
+}
+form.task-report-form.bg-sea-green select:focus {
+    background-color: #0ABB87;
+}
+form.task-report-form.bg-magenta select:focus {
+    background-color: #993399;
+}
+form.task-report-form.bg-brown select:focus {
+    background-color: #ac7339;
+}
+/*table dropdown colors ends*/
+
+
+form.task-report-form select:focus option {
+    background-color: #fff;
+    color: #000;
+}
+.record-card-body table .task-box::after {
     content: "";
     width: 5px;
     height: 5px;
@@ -301,11 +426,13 @@ form.task-report-form select:focus {
     background-color: #6F42C1;
     left: 6px;
     top: 50%;
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
     border-radius: 50%;
 }
 .record-card-body table .task-box:hover{
-	background-color: #F1F2FC;
+    background-color: #F1F2FC;
 }
 .record-card-body table span.category-name {
     padding: 0 8px;
@@ -314,10 +441,16 @@ form.task-report-form select:focus {
     border-radius: 5px;
 }
 form.task-report-form select {
-    padding: 0 0 0 3px;
-    height: 23px;
+    padding: 0 0 0 6px;
+    background: transparent;
+    -webkit-appearance: none;
     width: 100px;
     font-size: 11px;
+    border: 0;
+    height: 23px;
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 span.assignee-image {
     width: 40px;
@@ -325,25 +458,53 @@ span.assignee-image {
     border-radius: 50%;
     overflow: hidden;
     margin-right: 8px; 
+    display: -webkit-box; 
+    display: -ms-flexbox; 
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 span.assignee-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 .assignee-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+}
+form.assignee-info-form {
+    position: absolute;
+    top: 100%;
+    z-index: 1;
+}
+form.assignee-info-form input{
+    border: 1px solid #EBEDF2;
+    border-radius: 4px;
 }
 .record-card-footer {
     padding: 30px 15px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .record-card-footer ul.pagination li a {
     margin: 0 2px;
@@ -352,110 +513,31 @@ span.assignee-image img {
     border-radius: 4px;
     color: #000;
     border: 0; 
+    display: -webkit-box; 
+    display: -ms-flexbox; 
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
-/*.record-card-footer-inner2 button {
-    margin-right: 8px;
-}
-.record-card-footer-inner2 button .down-arrow {
-    margin-left: 30px;
-}*/
 .record-card-footer-inner2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .record-card-footer-inner2 form{
-	margin-right: 30px;
+    margin-right: 30px;
 }
 .record-card-footer-inner2 form select{
-	width: 100px;
+    width: 100px;
 }
 .record-card-footer-inner2 form select {
     background-color: #f1f2fc;
     font-size: 14px;
-}
-@media only screen and (max-width:991px){
-	.table-box {
-	    overflow-x: scroll;
-	}
-	.record-card-header-bottom-inner1{
-		width: 100%;
-		justify-content: center;
-		margin-bottom: 30px;
-	}
-	.record-card-header-bottom-inner2{
-		width: 100%;
-	}
-	.record-card-header-bottom-inner2 .upper-content,
-	.lower-content form{
-		justify-content: center;
-	}
-}
-
-@media only screen and (max-width:767px){
-	.record-card-footer-inner1 {
-	    width: 100%;
-	    margin-bottom: 20px;
-	}
-	.record-card-footer-inner2{
-		width: 100%;
-	}
-	.record-card-footer-inner2,
-	.record-card-footer-inner1 ul.pagination{
-		justify-content: center;
-	}
-}
-
-@media only screen and (max-width:640px){
-	form.search-form{
-		width: 100%;
-	}
-	form.search-form .form-group{
-	    width: 100%;
-	    max-width: 290px;
-		margin: 0 auto 10px;
-	}
-	.record-card-header-bottom-inner2 .upper-content{
-		flex-wrap: wrap;
-	}
-	.users-box-parent{
-		width: 100%;
-	}
-	.record-card-header-bottom-inner2 .upper-content > div,
-	.lower-content form .form-group:nth-child(2),
-	.lower-content form > div.block-btn{
-		margin-left: 0;
-	}
-	.users-box {
-	    margin: 0 auto 10px;
-	}
-	.date-picker button {
-	    margin-right: 10px;
-	    width: 245px;
-	}
-	.lower-content form {
-	    width: 290px;
-	    margin: auto;
-	}
-	.lower-content form .form-group:nth-child(1),
-	.lower-content form .form-group:nth-child(2){
-		max-width: 100%;
-		width: 100%;
-	}
-	.lower-content form .form-group:nth-child(3){
-		max-width: 245px;
-		margin:0 10px 0 0;
-	}
-	.record-card-footer ul.pagination li a{
-		width: 25px;
-		height: 25px;
-	}
-		.record-card-footer-inner2 form {
-	    margin-right: 10px;
-	}
-	.record-card-header-bottom{
-		padding: 15px 13px;
-	}
 }
